--- a/sass/elements/signInForm/_signInForm.scss
+++ b/sass/elements/signInForm/_signInForm.scss
@@ -85,6 +85,9 @@
         @include desktopS {
             width: 514px;
         }
+        @include laptopL {
+            border-radius: 16px;
+        }
         @include laptopM {
             width: 441px;
         }
@@ -94,6 +97,7 @@
         @include mobileL {
             border: 4px solid $color-blue;
             width: 398px;
+            border-radius: 10px;
         }
         @include mobileM {
             width: 360px;
@@ -236,7 +240,6 @@
                 cursor: pointer;
                 background: none;
             }
-            
         }
         .tower {
             z-index: 2;
@@ -293,6 +296,7 @@
         }
     }
     &__switchBtn {
+        display: none;
         margin-top: 20px;
         padding: 4px 0;
         text-align: center;
@@ -303,6 +307,9 @@
         width: 100%;
         border-radius: 20px;
         background: $color-blue;
+        @include tablet {
+            display: block;
+        }
         @include mobileL {
             margin-top: 10px;
             font-size: 17px;
@@ -467,7 +474,6 @@
 }
 
 .recoverPassword {
-    width: 184px;
     text-align: center;
     padding: 0.188rem;
     margin: 0 auto;
@@ -477,18 +483,18 @@
     font-weight: bold;
     letter-spacing: 0.125rem;
     @media screen and (min-width: 1024px) {
-          &:hover {
-        letter-spacing: 0.063rem;
-        cursor: pointer;
-        text-decoration: underline;
-        text-decoration-color: #4e5a61;
+        &:hover {
+            letter-spacing: 0.063rem;
+            cursor: pointer;
+            text-decoration: underline;
+            text-decoration-color: #4e5a61;
+        }
+        @include tablet {
+            text-decoration: underline;
+            text-decoration-color: #4e5a61;
+        }
     }
-    @include tablet {
-        text-decoration: underline;
-        text-decoration-color: #4e5a61;
-    }
-    }
-  
+
     @include tablet {
         margin: 12px auto;
     }
@@ -498,10 +504,10 @@
 }
 #auth-resetPassword {
     display: none;
-    height: 243px;
+    height: 280px;
     padding: 30px 0;
     @include desktopS {
-        height: 286px;
+        height: 272px;
         padding: 46px 0;
     }
     @include tablet {
