--- a/sass/elements/signInForm/_signInForm.scss
+++ b/sass/elements/signInForm/_signInForm.scss
@@ -56,9 +56,22 @@
         width: 583px;
         border-radius: 20px;
         padding: 10px;
-        background: rgba(255, 255, 255, 0.3);
-        backdrop-filter: blur(12px);
         transition: 0.4s;
+        position: relative;
+        z-index: 1;
+        background: rgba(255, 255, 255, 0.4);
+        &::after{
+            content: "";
+            position: absolute;
+            background: inherit;
+            z-index: -3;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+            filter: blur(10px);
+        }
         &-login {
             height: 500px;
             @include desktopS {
