--- a/sass/elements/game/_pets.scss
+++ b/sass/elements/game/_pets.scss
@@ -4,6 +4,9 @@
     height: 100%;
     background-size: 100% 100%;
     overflow: auto;
+    &::-webkit-scrollbar{
+        width: 0;
+    }
     @include tablet {
         padding-bottom: 40px;
     }
