improvements - specificUser - general

--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -261,6 +261,7 @@
                 margin-left: 6px;
             }
             @include mobileS {
+                margin-left: 9px;
                 font-size: 11px;
             }
         }
