--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -1,18 +1,21 @@
 .game__body{
-    background-size: 100% 100%;
-    &::before {
-        content: "";
-        position: absolute;
-        background: inherit;
-        z-index: -1;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-        filter: blur(42px);
-        margin: -20px;
-      }
+    background-size: 100% 100vh;
+    &::-webkit-scrollbar{
+        width: 0;
+    }
+        &:before {
+            content: "";
+            position: absolute;
+            background: inherit;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            box-shadow: inset 0 0 2500px rgba(255, 255, 255, .7);
+            filter: blur(30px);
+          }
+    
 }
 .game__root {
     width: 1920px;
