--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -460,7 +460,7 @@
                 box-shadow: 15px 15px $color-gray-dark;
             }
             @include mobileL {
-                border-radius: 16px;
+                border-radius: 0;
                 box-shadow: 0px 12px #343a40;
             }
         }
@@ -591,6 +591,7 @@
             right: 0;
             border-left: 9px solid $color-gold;
             border-bottom-left-radius: 40px;
+        
             @include desktopM {
                 border-left: 7px solid $color-gold;
             }
@@ -615,6 +616,13 @@
                 border-bottom-left-radius: 20px;
 
             }
+            @include tablet {
+                right: auto;
+                border-bottom-right-radius: 13px;
+                border-bottom-left-radius: 13px;
+                text-align: center;
+                display: flex;
+            }
         }
         @include desktopM {
             border-bottom: 7px solid $color-gold;
@@ -638,24 +646,34 @@
             width: 300px;
         }
         @include tablet {
-            width: 235px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 340px;
+            font-size: 18px;
+            height: 30px;
+            border-bottom-right-radius: 13px;
+            border-bottom-left-radius: 13px;
+            border: 4px solid $color-gold;
+            border-top: none;
         }
         @include mobileL {
-            border-bottom: 4px solid $color-gold;
-            width: 168px;
-            height: 42px;
-            font-size: 11px;
+         
+            border-bottom: 3px solid #ffcd00;
+    width: 304px;
+    height: 33px;
+    font-size: 17px
         }
         @include mobileM {
             border-bottom: 3px solid $color-gold;
-            width: 161px;
-            height: 37px;
-            font-size: 10px;
+            width: 295px;
+            height: 28px;
+            font-size: 15px;
         }
         @include mobileS {
-            width: 136px;
-            height: 34px;
-            font-size: 9px;
+            width: 241px;
+            height: 27px;
+            font-size: 12px;
         }
     }
     &__deliveryTitle {
@@ -664,11 +682,18 @@
         letter-spacing: 0.063rem;
         word-spacing: 0.125rem;
         text-shadow: 0.063rem 0 $color-gold;
+        @include tablet {
+            font-size: 1em;
+        }
     }
     &__deliveryTime {
         font-size: 1.875em;
         font-weight: 700;
         word-spacing: 0.125rem;
+        @include tablet {
+            font-size: 1em;
+            margin-left: 0.625em;
+        }
     }
     &__itemPriceWrapper {
         height: 30px;
