--- a/src/sass/elements/game/_shop.scss
+++ b/src/sass/elements/game/_shop.scss
@@ -579,12 +579,14 @@
     &__deliveryWrapper {
         position: absolute;
         top: 0;
-
         width: 41%;
         height: 59px;
         border-bottom: 9px solid $color-gold;
         background: rgba(255, 255, 255, 0.6);
         font-size: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         &-blacksmith {
             padding-right: 10px;
             text-align: end;
@@ -646,7 +648,7 @@
             width: 300px;
         }
         @include tablet {
-            display: flex;
+            flex-direction: row;
             justify-content: center;
             align-items: center;
             width: 340px;
@@ -690,6 +692,7 @@
         font-size: 1.875em;
         font-weight: 700;
         word-spacing: 0.125rem;
+        text-align: end;
         @include tablet {
             font-size: 1em;
             margin-left: 0.625em;
