--- a/src/sass/elements/game/_account.scss
+++ b/src/sass/elements/game/_account.scss
@@ -18,6 +18,7 @@
         padding: 5px 10px;
         border-radius: 20px;
         padding-bottom: 10px;
+        box-shadow: 0 0 5px $color-black;
         @include laptopM {
             width: 360px;
             border-radius: 16px;
