--- a/src/sass/elements/game/_blacksmith.scss
+++ b/src/sass/elements/game/_blacksmith.scss
@@ -23,6 +23,7 @@
         padding: 10px;
         z-index: 2;
         position: relative;
+        background: rgba(255,255,255,0.3);
         &::-webkit-scrollbar{
             width: 0;
         }
