--- a/src/sass/elements/game/_general.scss
+++ b/src/sass/elements/game/_general.scss
@@ -24,6 +24,7 @@
     max-height: 1080px;
     display: flex;
     margin: 0 auto;
+    box-shadow: 0 0 16px $color-black;
     @include desktopM {
         width: 1600px;
         min-height: 720px;
