--- a/src/sass/elements/game/_guard.scss
+++ b/src/sass/elements/game/_guard.scss
@@ -51,7 +51,7 @@
         z-index: 1;
         border-radius: 20px;
         position: relative;
-     
+        box-shadow: 0 0 10px $color-black;
         @media screen and (max-height: 540px) {
             margin-top: 20px;
         }
@@ -249,6 +249,7 @@
     &__summary {
         padding: 15px;
         border-radius: 25px;
+        box-shadow: 0 0 10px $color-black;
         @include laptopM {
             padding: 8px;
             border-radius: 16px;
