--- a/src/sass/elements/game/_inbox.scss
+++ b/src/sass/elements/game/_inbox.scss
@@ -234,15 +234,26 @@
     &__listDate {
         grid-column: 5/6;
         grid-row: 1/-1;
-        text-align: end;
+        
         display: flex;
-        justify-content: flex-end;
         align-items: center;
         font-size: 1.25rem;
         border-left: 4px solid $color-gray-dark;
         overflow: hidden;
+        padding-left: 5px;
         @include laptopS {
             font-size: 12px;
+        }
+        @include tablet {
+            font-size: 20px;
+        }
+        @include mobileL {
+            padding-left: 6px;
+            font-size: 12px;
+        }
+        @include mobileM {
+            padding-left: 4px;
+            font-size: 11px;
         }
         @include mobileS {
             font-size: 9px;
