--- a/src/sass/elements/game/_pets.scss
+++ b/src/sass/elements/game/_pets.scss
@@ -48,6 +48,7 @@
         margin-top: 10px;
         background: rgba(255, 255, 255, 0.5);
         border-radius: 20px;
+        box-shadow: 0 0 5px $color-black;
         padding: 0.688rem;
         @include desktopS {
             border-radius: 16px;
@@ -97,6 +98,7 @@
         background: rgba(255, 255, 255, 0.5);
         border-radius: 20px;
         transition: 0.3s;
+        box-shadow: 0 0 10px $color-black;
         @media screen and (min-width: 1228px) {
             &:hover {
                 background: rgba(255, 255, 255, 0.7);
