--- a/src/sass/elements/game/_profile.scss
+++ b/src/sass/elements/game/_profile.scss
@@ -1,5 +1,6 @@
 .profile {
-   background-image: url("../../dist/images/background_profile.jpg");
+    background-image: url("../../dist/images/background_profile.jpg");
+    background-size: 100% 100%;
     display: flex;
     overflow: auto;
     height: 100%;
@@ -16,6 +17,7 @@
         padding: 10px;
         width: 50%;
         z-index: 1;
+        background: rgba(255, 255, 255, 0.3);
         &:first-child {
             border-right: 6px solid $color-gray_dark;
             @include laptopL {
@@ -60,34 +62,33 @@
         @include laptopS {
             border-bottom: 4px solid $color-gold;
         }
-       
-            @include desktopM {
-                height: 454px;
-            }
-            @include laptopL {
-                height: 376px;
-            }
-            @include laptopM {
-            }
-            @include laptopS {
-                height: 330px;
-            }
-            @include ipadPro {
-                height: 407px;
-            }
-            @include tablet {
-                height: 606px;
-            }
-            @include mobileL {
-                height: 387px;
-            }
-            @include mobileM {
-                height: 344px;
-            }
-            @include mobileS {
-                height: 282px;
-            }
 
+        @include desktopM {
+            height: 454px;
+        }
+        @include laptopL {
+            height: 376px;
+        }
+        @include laptopM {
+        }
+        @include laptopS {
+            height: 330px;
+        }
+        @include ipadPro {
+            height: 407px;
+        }
+        @include tablet {
+            height: 606px;
+        }
+        @include mobileL {
+            height: 387px;
+        }
+        @include mobileM {
+            height: 344px;
+        }
+        @include mobileS {
+            height: 282px;
+        }
     }
 
     &__equipmentItem {
@@ -125,7 +126,7 @@
     }
 
     &__portrait {
-      background-image: url("../../dist/images/profile_frame_portrait.png");
+        background-image: url("../../dist/images/profile_frame_portrait.png");
         background-repeat: no-repeat;
         background-position: center;
         background-size: 120% 100%;
@@ -897,7 +898,7 @@
             border-radius: 15px;
             background-size: cover;
             background-repeat: no-repeat;
-           background-image: url("../../dist/images/profile_description_ribbon.png");
+            background-image: url("../../dist/images/profile_description_ribbon.png");
             @include laptopS {
                 height: 38px;
                 width: 38px;
@@ -1348,7 +1349,6 @@
     background: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(3px);
 
-   
     table {
         width: 100%;
         //height: 100%;
@@ -1719,7 +1719,7 @@
     }
 }
 
-#searched_user_general{
+#searched_user_general {
     width: 100%;
 }
 @keyframes an__profile__item-notAfford {
