--- a/src/sass/elements/game/_shop.scss
+++ b/src/sass/elements/game/_shop.scss
@@ -583,6 +583,7 @@
         height: 59px;
         border-bottom: 9px solid $color-gold;
         background: rgba(255, 255, 255, 0.6);
+        box-shadow: 0 0 5px $color-black;
         font-size: 16px;
         display: flex;
         flex-direction: column;
