--- a/src/sass/elements/game/_blacksmith.scss
+++ b/src/sass/elements/game/_blacksmith.scss
@@ -5,6 +5,16 @@
     position: relative;
     overflow: auto;
      height: 100%;
+     &::after{
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.3);
+     }
      @include ipadPro {
          flex-direction: column-reverse;
      }
@@ -17,13 +27,11 @@
         width: 0;
     }
     &__item{
-        overflow: auto;
         height: 100%;
         width: 50%;
         padding: 10px;
         z-index: 2;
         position: relative;
-        background: rgba(255,255,255,0.3);
         &::-webkit-scrollbar{
             width: 0;
         }
