--- a/src/sass/elements/game/_navMenu.scss
+++ b/src/sass/elements/game/_navMenu.scss
@@ -9,6 +9,10 @@
         z-index: 3;
         position: absolute;
         display: none;
+        height: calc(100% - 70px);
+    }
+    @include tablet {
+        height: 100%;
     }
 
     @include mobileL {
@@ -237,7 +241,11 @@
                transform: rotate(20deg);
             }
             @include ipadPro {
-                width: 157px;
+                width: 104px;
+                bottom: -28px;
+            }
+            @include laptopL {
+
             }
             @include tablet {
                 width: 78px;
