--- a/src/sass/elements/game/_profile.scss
+++ b/src/sass/elements/game/_profile.scss
@@ -4,6 +4,17 @@
     display: flex;
     overflow: auto;
     height: 100%;
+    position: relative;
+    &::after{
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.3);
+     }
     &::-webkit-scrollbar {
         width: 0;
     }
@@ -11,13 +22,12 @@
         justify-content: center;
     }
     &__item {
-        overflow: auto;
         height: 100%;
         position: relative;
         padding: 10px;
         width: 50%;
         z-index: 1;
-        background: rgba(255, 255, 255, 0.3);
+
         &:first-child {
             border-right: 6px solid $color-gray_dark;
             @include laptopL {
@@ -159,7 +169,7 @@
             margin-top: 42px;
         }
         @include tablet {
-            margin-top: 72px;
+            margin-top: 70px;
         }
         @include mobileL {
             margin-top: 64px;
@@ -850,8 +860,7 @@
         border: 5px solid $color-red;
         border-radius: 8px;
         position: relative;
-        background: rgba(255, 255, 255, 0.6);
-        backdrop-filter: blur(3px);
+        background: rgba(255, 255, 255, 0.3);
         padding: 20px;
         box-shadow: 0 0 3px $color-black;
         &::before {
@@ -1347,7 +1356,7 @@
     box-shadow: 0 0 3px $color-black;
 
     background: rgba(255, 255, 255, 0.6);
-    backdrop-filter: blur(3px);
+
 
     table {
         width: 100%;
