--- a/src/sass/elements/signInForm/_signInForm.scss
+++ b/src/sass/elements/signInForm/_signInForm.scss
@@ -60,6 +60,7 @@
         position: relative;
         z-index: 1;
         background: rgba(255, 255, 255, 0.4);
+        box-shadow: 0 0 13px $color-black;
         &::after{
             content: "";
             position: absolute;
