--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,12 +5,12 @@
 @import "./elements/signInForm/signInForm";
 
 @import "./elements/game/general";
-@import "./elements/game/navMenu";
+@import "./elements/game/navigation";
 @import "./elements/game/profile";
 @import "./elements/game/pets";
 @import "./elements/game/blacksmith";
 @import "./elements/game/wizard";
-@import "./elements/game/shop";
+@import "./elements/game/market";
 @import "./elements/game/tavern";
 @import "./elements/game/guard";
 @import "./elements/game/searchFriends";
