--- a/src/sass/elements/game/_general.scss
+++ b/src/sass/elements/game/_general.scss
@@ -14,6 +14,12 @@
         bottom: 0;
         box-shadow: inset 0 0 2500px rgba(255, 255, 255, 0.7);
         filter: blur(30px);
+        @include ipadPro{
+            display: none;
+        }
+    }
+    @include ipadPro{
+        background: none !important;
     }
 }
 .game__root {
@@ -65,18 +71,17 @@
     width: 80%;
     height: 100%;
     position: relative;
+    overflow: auto;
     @include ipadPro {
         z-index: 2;
         width: 100%;
     }
-}
-#game__view {
-    overflow: hidden;
-    height: 900px;
-    width: 100%;
-    height: 100%;
     @include ipadPro {
         height: calc(100% - 68px);
+    }
+    @include tablet{
+        position: fixed;
+        top: 0;
     }
     @include mobileL {
         height: calc(100% - 52px);
@@ -84,6 +89,12 @@
     @include mobileM {
         height: calc(100% - 43px);
     }
+}
+#game__view {
+    overflow: hidden;
+    height: 900px;
+    width: 100%;
+    height: 100%;
 }
 .game__errorWrapper {
     position: absolute;
